--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,13 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+
+# 接続するためのdriverは、playに同梱されている
+db.default.driver=com.mysql.jdbc.Driver
+# facebookは、DB name
+# 3306はデフォルトのポート番号なので、記述しなくてもいい
+db.default.url="jdbc:mysql://localhost:3306/facebook"
+db.default.username=user
+db.default.password="password"
+# ebeanは、playに内蔵されているO/Rマッパー
+# modelsディレクトリ内で利用するので、以下のような設定をしている
+ebean.default = ["models.*"]
