vue.jsの環境構築

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,12 +2,12 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 
 # 接続するためのdriverは、playに同梱されている
-db.default.driver=com.mysql.jdbc.Driver
 # facebookは、DB name
 # 3306はデフォルトのポート番号なので、記述しなくてもいい
-db.default.url="jdbc:mysql://localhost:3306/facebook"
-db.default.username=user
-db.default.password="password"
+# driver指定
+db.default.driver=com.mysql.jdbc.Driver
+# url指定
+db.default.url="jdbc:mysql://localhost:3314/facebook"
 # ebeanは、playに内蔵されているO/Rマッパー
 # modelsディレクトリ内で利用するので、以下のような設定をしている
 ebean.default = ["models.*"]
