--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,32 @@ version: "3"
 services:
   # node.js npm webpackの環境構築
   front:
-    build: ./app/Dockerfile
+    build:
+      # dockerfileは、親ディレクトリをCOPYできないので、
+      # ここで、contextをルートに設定している。
+      context: ./
+      dockerfile: ./front/Dockerfile
     container_name: vue-js-container
+    ports:
+      - 8080:8080
+    tty: true
+#    volumes:
+#      - ./public
   # playframeworkの環境を整える。
   # sbtを使えるように
-  play-framework:
-    build: ./front/Dockerfile
-  db:
-    image: mysql:5.7
-    container_name: mysql-container
-    environment:
-      MYSQL_DATABASE: facebook
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: password
-    volumes:
-      - ./db/data:/var/lib/mysql
-      - ./db/sql:/docker-entrypoint-initdb.d
-      - ./db/my.cnf:/etc/mysql/conf.d/my/cnf
-    ports:
-      - "3314:3306"
+#  play-framework:
+#    build: ./front/Dockerfile
+#  db:
+#    image: mysql:5.7
+#    container_name: mysql-container
+#    environment:
+#      MYSQL_DATABASE: facebook
+#      MYSQL_USER: user
+#      MYSQL_PASSWORD: password
+#      MYSQL_ROOT_PASSWORD: password
+#    volumes:
+#      - ./db/data:/var/lib/mysql
+#      - ./db/sql:/docker-entrypoint-initdb.d
+#      - ./db/my.cnf:/etc/mysql/conf.d/my/cnf
+#    ports:
+#      - "3314:3306"
