コンテナ内の/app/publicディレクトリと、ホストの./publicをマウントする

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       context: ./
       dockerfile: ./front/Dockerfile
     container_name: vue-js-container
+    volumes:
+      - ./public:/app/public
     ports:
       - 8080:8080
     tty: true
