--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     ports:
       - 8080:8080
     tty: true
+#  nginx:
+#    build:
+
 #    volumes:
 #      - ./public
   # playframeworkの環境を整える。
