--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,24 +11,51 @@ services:
     container_name: vue-js-container
     environment:
       WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
+    # ホストから通信するためのポート
+    networks:
+      - facebook-play
     ports:
       - "8080:8080"
     tty: true
-  # playframeworkの環境を整える。
-  # sbtを使えるように
-#  play-framework:
-#    build: ./front/Dockerfile
-#  db:
-#    image: mysql:5.7
-#    container_name: mysql-container
-#    environment:
-#      MYSQL_DATABASE: facebook
-#      MYSQL_USER: user
-#      MYSQL_PASSWORD: password
-#      MYSQL_ROOT_PASSWORD: password
-#    volumes:
-#      - ./db/data:/var/lib/mysql
-#      - ./db/sql:/docker-entrypoint-initdb.d
-#      - ./db/my.cnf:/etc/mysql/conf.d/my/cnf
-#    ports:
-#      - "3314:3306"
+  play-framework:
+    # https://hub.docker.com/r/hseeberger/scala-sbt/dockerfile
+    # すでに作ってくれているイメージを使う
+    image: hseeberger/scala-sbt
+    container_name: play-container
+    volumes:
+      # TODO:どのファイルをコンテナ内にマウントするののか
+      # このプロジェクト自体をコンテナ内の/rootディレクトリにマウントする
+      - ../play-java-seed:/root
+    networks:
+      - facebook-play
+    # ホストから通信するためのポート
+    ports:
+      - "9000:9000"
+    # 同じdockerネットワークの他のコンテナから通信するためのポート
+    expose:
+      - "9000"
+    tty: true
+  db:
+    image: mysql:5.7
+    container_name: mysql-container
+    environment:
+      MYSQL_DATABASE: facebook
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./db/data:/var/lib/mysql
+      - ./db/sql:/docker-entrypoint-initdb.d
+      - ./db/my.cnf:/etc/mysql/conf.d/my/cnf
+    # ホストから通信するためのポート
+    networks:
+      - facebook-play
+    ports:
+      - "3314:3306"
+    # 同じdockerネットワークの他のコンテナから通信するためのポート
+    expose:
+      - "3306"
+
+networks:
+  facebook-play:
+    external: true
