frontからplayへの通信観戦

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     container_name: vue-js-container
     environment:
       WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
+    volumes:
+      - ./front:/app/
     # ホストから通信するためのポート
     networks:
       - facebook-play
