vueとplayの疎通確認

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,3 +11,13 @@ db.default.url="jdbc:mysql://localhost:3314/facebook"
 # ebeanは、playに内蔵されているO/Rマッパー
 # modelsディレクトリ内で利用するので、以下のような設定をしている
 ebean.default = ["models.*"]
+
+play.filters.enabled += play.filters.hosts.AllowedHostsFilter
+
+play.filters.hosts {
+  # Allow requests to play-container:9000, and localhost:9000.
+  # 接続先のホスト名：ポートをホワイトリストに登録する必要がある。
+  # つまり、外部から"play-container:9000", "localhost:9000"の２つのホストへのアクセスが許可される
+  # イメージ的に、外部から通信が来た時にまずこのファイルが読まれて、どこに通信するかを制限している
+  allowed = ["play-container:9000", "localhost:9000"]
+}
