--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ./front:/app/
     # ホストから通信するためのポート
     networks:
-      - facebook-play
+      - play-network
     ports:
       - "8080:8080"
     tty: true
@@ -29,7 +29,7 @@ services:
       # このプロジェクト自体をコンテナ内の/rootディレクトリにマウントする
       - ../play-java-seed:/root
     networks:
-      - facebook-play
+      - play-network
     # ホストから通信するためのポート
     ports:
       - "9000:9000"
@@ -51,7 +51,7 @@ services:
       - ./db/my.cnf:/etc/mysql/conf.d/my/cnf
     # ホストから通信するためのポート
     networks:
-      - facebook-play
+      - play-network
     ports:
       - "3314:3306"
     # 同じdockerネットワークの他のコンテナから通信するためのポート
@@ -59,5 +59,5 @@ services:
       - "3306"
 
 networks:
-  facebook-play:
+  play-network:
     external: true
